--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "koa": "^2.5.3",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
+    "nedb": "^1.8.0",
     "nodemailer": "^4.7.0",
     "nodemailer-smtp-transport": "^2.7.4",
     "ramda": "^0.26.0",
     "raw-body": "^2.3.3",
-    "validator": "^10.9.0"
+    "validator": "^10.9.0",
+    "winston": "^3.1.0",
+    "winston-daily-rotate-file": "^3.5.1"
   }
 }
